--- a/AboutMe.html
+++ b/AboutMe.html
@@ -24,11 +24,11 @@
         background-color: #343a40; /* Dark background for the body */
       }
       .text-white {
-        color: #fff !important;
+        color: #fff;
       }
       .container.py-5 {
-        padding-top: 3rem !important;
-        padding-bottom: 3rem !important;
+        padding-top: 3;
+        padding-bottom: 3;
       }
       .progress {
         height: 20px; /* Adjust progress bar height */
@@ -200,7 +200,7 @@
                   aria-valuemax="100"
                 >
                   <div class="progress-bar bg-warning" style="width: 65%">
-                    65%
+  
                   </div>
                 </div>
               </div>
