--- a/Blog.html
+++ b/Blog.html
@@ -25,11 +25,11 @@
         color: #ecf0f1;
       }
       .text-white {
-        color: #fff !important;
+        color: #fff;
       }
       .container.py-5 {
-        padding-top: 3rem !important;
-        padding-bottom: 3rem !important;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
       }
 
       /* Blog specific styling */
@@ -51,7 +51,7 @@
       }
 
       .card-subtitle {
-        color: #b0b0b0 !important; /* Lighter muted text */
+        color: #b0b0b0; /* Lighter muted text */
         font-size: 0.85em;
       }
 
@@ -61,14 +61,14 @@
       }
 
       .card-link {
-        color: #28a745 !important; /* Bootstrap success color for links */
+        color: #28a745 ; /* Bootstrap success color for links */
         text-decoration: none;
         font-weight: bold;
         transition: color 0.3s ease;
       }
 
       .card-link:hover {
-        color: #218838 !important; /* Darker green on hover */
+        color: #218838 ; /* Darker green on hover */
       }
 
       .blog-img {
