--- a/Galery.html
+++ b/Galery.html
@@ -35,11 +35,11 @@
 
       .navbar-brand,
       .nav-link {
-        color: var(--light-text) !important;
+        color: var(--light-text);
       }
 
       .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28248, 249, 250, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28248, 249, 250, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
       }
 
       /* Hapus atau modifikasi bagian ini */
@@ -50,7 +50,7 @@
 
       /* Tambahkan CSS ini untuk menjaga warna putih pada nav-link aktif */
       .navbar-dark .navbar-nav .nav-link.active {
-        color: var(--light-text) !important;
+        color: var(--light-text);
         font-weight: bold;
       }
 
