--- a/Kontak.html
+++ b/Kontak.html
@@ -25,7 +25,7 @@
         color: #fff; /* Default text color for the body */
       }
       .text-white {
-        color: #fff !important;
+        color: #fff;
       }
       .form-control {
         background-color: #495057; /* Darker background for form inputs */
