--- a/Proyek.html
+++ b/Proyek.html
@@ -26,7 +26,7 @@
       }
 
       .text-white {
-        color: #fff !important;
+        color: #fff;
       }
 
       /* Pastikan card-img-top memiliki tinggi yang konsisten dan memenuhi ruang */
