--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         background-color: #343a40; /* Dark background for the body */
       }
       .text-white {
-        color: #fff !important;
+        color: #fff;
       }
       .container.py-5 {
-        padding-top: 3rem !important;
-        padding-bottom: 3rem !important;
+        padding-top: 3rem ;
+        padding-bottom: 3rem ;
       }
       .progress {
         height: 20px; /* Adjust progress bar height */
