--- a/AboutMe.html
+++ b/AboutMe.html
@@ -27,8 +27,8 @@
         color: #fff;
       }
       .container.py-5 {
-        padding-top: 3;
-        padding-bottom: 3;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
       }
       .progress {
         height: 20px; /* Adjust progress bar height */
